positioned text, added game over button

--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
   <script src="blackjack.js"></script>
 </head>
 <body>
-  <div id="Bankroll">
-    <h1>Your Bankroll</h1>
+  <div id ="Dealers-Sum">
+    <h1>Dealer's Sum</h1>
     <p></p>
   </div>
   <div id="Bet">
     <h1>Current Bet</h1>
     <p></p>
   </div>
+  <div id="Bankroll">
+    <h1>Your Bankroll</h1>
+    <p></p>
+  </div>
   <div id ="Your-Sum">
     <h1>Your Sum</h1>
     <p></p>
   </div>
-  <div id ="Dealers-Sum">
-    <h1>Dealer's Sum</h1>
-    <p></p>
+  <div id="Game-Over-Button">
+    <h1>Game Over</h1>
   </div>
   <div class="Deck" id="Deck">
     <img id="Two-of-Hearts" src="http://i.imgur.com/jmSQ2tm.png">
