--- a/index.html
+++ b/index.html
@@ -4,29 +4,60 @@
   <meta charset="UTF-8">
   <title>Blackjack</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="blackjack.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
+  <!--<div class="text-box"></div>-->
+  <div class="buttons">
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="Game-Over-Button">
+          <h1>Restart</h1>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="Hit-Button">
+          <h1>Hit</h1>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="Stand-Button">
+          <h1>Stand</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="betting">
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="Bet-Input">
+          <h1>Place a Bet</h1>
+          <input type="text" id="bet-number" placeholder="Please Enter Your Bet"><button id="bet-button">Confirm</button>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div id="Bet">
+          <h1>Current Bet</h1>
+          <p></p>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div id="Bankroll">
+          <h1>Your Bankroll</h1>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id ="Dealers-Sum">
     <h1>Dealer's Sum</h1>
-    <p></p>
-  </div>
-  <div id="Bet">
-    <h1>Current Bet</h1>
-    <p></p>
-  </div>
-  <div id="Bankroll">
-    <h1>Your Bankroll</h1>
     <p></p>
   </div>
   <div id ="Your-Sum">
     <h1>Your Sum</h1>
     <p></p>
   </div>
-  <div id="Game-Over-Button">
-    <h1>Game Over</h1>
-  </div>
+  <div id="Dealer-Hand"></div>
   <div class="Deck" id="Deck">
     <img id="Two-of-Hearts" src="http://i.imgur.com/jmSQ2tm.png">
     <img id="Two-of-Spades" src="http://i.imgur.com/p36MAVB.png">
@@ -83,6 +114,7 @@
     <img id="Facedown-Card" src="http://ec1.images-amazon.com/images/G/01/askville/3008979_3011637_mywrite/bicycleback01.jpg">
   </div>
   <div id="Player-Hand"></div>
-  <div id="Dealer-Hand"></div>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="blackjack.js"></script>
+</body>
 </html>
